applied margin-right css to 0 for mobile-view on buttons download resume. in order check if the issue in mobile view for horizontal scroll persists

--- a/style.css
+++ b/style.css
@@ -759,6 +759,11 @@ nav .mobile-view {
     font-weight: bold;
   }
 
+  .pdf,
+  .docx {
+    margin-right: 0px;
+  }
+
   .contact-left,
   .contact-right {
     flex-basis: 100%;
